# GbRust

./: .gitignore  Cargo.toml  README.md
src/: cpu.rs  main.rs  render.rs
src/cpu/: flags.rs  instructions.rs  registers.rs
