[package]
name = "gbemu"
authors = ["Jerne Vingerhoets <jerne.vingerhoets@gmail.com>"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
# Pixel Buffer - Hardware accelerated
pixels = "0.9.0"
beryllium = { version = "0.7", features = ["use-raw-window-handle"] }
fermium = { version = "20016.1.1", default-features = false }
zstring = "0.1"
env_logger = "0.9.0"
log = "0.4"
winit = "0.26"
winit_input_helper = "0.12"